Added a lot more theory.

--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -6,6 +6,7 @@
 \providecommand{\HH}{\mathbb{H}}
 \providecommand{\QQbar}{\bar{\QQ}}
 \providecommand{\barQQ}{\bar{\QQ}}
+\providecommand{\Fpbar}{\bar{\FF}_p}
 \providecommand{\cC}{\mathcal{C}}
 
 \providecommand{\fX}{\mathfrak{X}}
@@ -48,3 +49,4 @@
 \providecommand{\mcd}{\operatorname{mcd}}
 \providecommand{\gcd}{\operatorname{mcd}}
 \providecommand{\Eq}{\operatorname{Eq}}
+\providecommand{\res}{\operatorname{res}}
