--- a/src/07-Automorfismes.Rmd
+++ b/src/07-Automorfismes.Rmd
@@ -185,7 +185,7 @@ Ja hem vist $1 \implies 2$ i $1 \implies 4$. Fixem-nos també que $4\implies 3$ 
   per a tot $i=1,\ldots, m$ i concloem que $K$ és el cos de descomposició de $f(x)$.
 
 - $3 \implies 1$: Suposem que $K/F$ és el cos de descomposició d'un polinomi separable $f(x)\in F[x]$. Com s'ha
-  indicat al Corol·lari \@ref(cor:variacion-aixecament-2), a cada pas podem prendre per $\alpha$ una arrel del polinomi $f(x)$
+  indicat al Corol·lari \@ref(cor:variacio-aixecament-2), a cada pas podem prendre per $\alpha$ una arrel del polinomi $f(x)$
   i per tant tindrem la igualtat.
 :::
 
